--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,68 @@
-target/
-node_modules/
-.env
-dist/
+# --- General ---
+.DS_Store
 *.log
+*.log.*
+*.old
+*.bak
+*.swp
+*~
+*.tmp
+*.temp
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# --- Secrets & Environment ---
+.env
+.env.*
+
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Vite build output
+dist/
+.vite/
+
+# --- Rust (Backend) ---
+**/target/
+
+# --- Docker ---
+docker-compose.override.yml
+docker-compose.*.yml # If you have specific overrides like docker-compose.dev.yml
+*.env # Docker-specific env files if not covered by general .env
+
+# --- IDE & Editor Specific ---
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+gen/
+
+# VS Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Virtual Env
+.env/
+.venv/
+ENV/
+env.bak/
+venv.bak/
