--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -177,9 +177,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/sites-enabled:/etc/nginx/sites-enabled:ro
-      - ./ssl:/etc/nginx/ssl:ro
       - nginx_cache:/var/cache/nginx
       - nginx_logs:/var/log/nginx
     networks:
