--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,8 +5,8 @@
 name = "dark-performance-backend"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <carterperez@certgames.com.com>"]
-description = "High-performance backend showcasing Rust's computational capabilities"
+authors = ["Carter Perez carterperez@certgames.com. https://certgames.com"]
+description = "High-performance backend showcasing Rust's computational capabilities. https://certgames.com"
 repository = "https://github.com/CarterPerez-dev/kill-pr0cess.inc"
 license = "MIT"
 readme = "README.md"
@@ -53,15 +53,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 
 # Database integration with comprehensive features
-sqlx = { version = "0.7", features = [
-    "runtime-tokio-rustls",
-    "postgres",
-    "chrono",
-    "uuid",
-    "json",
-    "migrate",
-    "offline"
-] }
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate" ] }
 redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"], optional = true }
 
 # HTTP client with full feature set
@@ -150,10 +142,6 @@ harness = false
 
 [[bench]]
 name = "database_operations"
-harness = false
-
-[[bench]]
-name = "api_performance"
 harness = false
 
 # Optional feature flags for conditional compilation
