--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -135,6 +135,11 @@ wiremock = "0.5"
 testcontainers = "0.15"
 rstest = "0.18"
 
+
+# Optional feature flags for conditional compilation
+[features]
+default = ["postgres", "redis", "metrics"]
+
 # Database backends
 postgres = ["sqlx/postgres"]
 mysql = ["sqlx/mysql"]
