--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -25,7 +25,7 @@ USER developer
 WORKDIR /app
 
 COPY --chown=developer:developer Cargo.toml ./Cargo.toml
-RUN mkdir -p src && echo "fn main()" > src/main.rs && cargo generate-lockfile
+RUN mkdir -p src && echo "fn main() {}" > src/main.rs && cargo generate-lockfile
 COPY --chown=developer:developer build.rs ./
 
 # I'm creating a dummy src to cache dependencies
