--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,10 +59,10 @@ http {
     text/plain
     text/xml;
 
-    # Brotli compression (if available)
-    brotli on;
-    brotli_comp_level 6;
-    brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    # Brotli compression
+    #brotli on;
+    #brotli_comp_level 6;
+    #brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Rate limiting for API endpoints
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
