--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -85,6 +85,7 @@ validator = { version = "0.16", features = ["derive"] }
 # Mathematical computation for fractals
 num-complex = "0.4"
 num-traits = "0.2"
+num_cpus = "1.16"
 rayon = "1.8"
 ndarray = "0.15"
 
@@ -100,6 +101,7 @@ time = "0.3"
 
 # UUID and unique identifiers
 uuid = { version = "1.0", features = ["v4", "serde", "fast-rng"] }
+rand = "0.8"
 
 # Memory management and optimization
 once_cell = "1.19"
@@ -177,8 +179,7 @@ version = "0.1"
 optional = true
 default-features = false
 
-# Build script for compile-time optimizations
-[build]
+
 # Enable build script for compile-time configuration
 build = "build.rs"
 
