--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -44,7 +44,7 @@ lto = "fat"
 axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
 tokio = { version = "1.0", features = ["full", "tracing"] }
 tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
-tower-http = { version = "0.5", features = ["cors", "compression-full", "trace", "auth", "request-id"] }
+tower-http = { version = "0.5", features = ["cors", "compression-full", "trace", "auth", "request-id", "timeout", "limit"] }
 hyper = { version = "1.0", features = ["full"] }
 
 # Serialization and data handling
