--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,25 +16,24 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "@solidjs/router": "^0.15.0",
-    "@solidjs/start": "^1.1.0",
+    "@solidjs/router": "^0.14.7",
+    "@solidjs/start": "^1.0.2",
     "@solidjs/meta": "^0.29.4",
-    "solid-js": "^1.9.5",
-    "vinxi": "^0.5.3"
+    "solid-js": "^1.8.16",
+    "vinxi": "^0.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.7",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "tailwindcss": "^4.0.7",
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.0.0",
+    "tailwindcss": "^3.4.3",
+    "autoprefixer": "^10.4.19",
+    "@types/node": "^20.12.7",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vitest": "^1.6.0",
     "eslint": "^8.57.0",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "prettier": "^3.1.0",
-    "autoprefixer": "^10.4.16"
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "prettier": "^3.2.5",
+    "postcss": "^8.4.38"
   },
   "engines": {
     "node": ">=20",
