--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,6 +1,3 @@
-# Development Dockerfile for the SolidJS frontend with hot module replacement and development tools.
-# I'm setting up a development environment with volume mounting for instant file changes and debugging capabilities.
-
 FROM node:20-alpine
 
 # I'm installing development tools and utilities
@@ -16,7 +13,11 @@ WORKDIR /app
 COPY --chown=developer:nodejs package*.json ./
 
 # I'm installing all dependencies including dev dependencies
-RUN npm ci
+RUN npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+
+# I'm applying a patch for vite-plugin-solid
+COPY --chown=developer:nodejs vite-plugin-solid-patch.js ./
+RUN node vite-plugin-solid-patch.js
 
 # I'm setting development environment variables
 ENV NODE_ENV=development
@@ -27,4 +28,4 @@ ENV VITE_API_URL=http://localhost:3001
 EXPOSE 3000
 
 # I'm starting the development server with hot reload
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+CMD ["npm", "run", "dev"]
