--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "High-performance SolidJS frontend for computational showcase",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev --host 0.0.0.0 --port 3000",
+    "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
     "preview": "vinxi preview",
@@ -17,14 +17,14 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.14.7",
-    "@solidjs/start": "^1.0.2",
+    "@solidjs/start": "^1.0.8",
     "@solidjs/meta": "^0.29.4",
-    "solid-js": "^1.8.16",
-    "vinxi": "^0.4.1"
+    "solid-js": "^1.9.3",
+    "vinxi": "^0.5.6"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "autoprefixer": "^10.4.19",
+    "tailwindcss": "^3.4.16",
+    "autoprefixer": "^10.4.20",
     "@types/node": "^20.12.7",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
