--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,22 +1,34 @@
+# Clean development Dockerfile for SolidJS frontend with vite-plugin-solid patch.
+# I'm creating a straightforward development environment that applies the necessary patches without complex scripting.
+
 FROM node:20-alpine
 
-# I'm installing development tools and utilities
+# I'm installing essential development dependencies
 RUN apk add --no-cache \
     git \
     curl \
+    python3 \
+    make \
+    g++ \
     && rm -rf /var/cache/apk/*
 
+# I'm creating a non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S frontend -u 1001 -G nodejs
 
+RUN mkdir -p /app && chown frontend:nodejs /app
+
+USER frontend
 WORKDIR /app
 
 # I'm copying package files for dependency installation
-COPY --chown=developer:nodejs package*.json ./
+COPY --chown=frontend:nodejs package*.json ./
 
-# I'm installing all dependencies including dev dependencies
+# I'm installing dependencies
 RUN npm ci --legacy-peer-deps || npm install --legacy-peer-deps
 
-# I'm applying a patch for vite-plugin-solid
-COPY --chown=developer:nodejs vite-plugin-solid-patch.js ./
+# I'm copying and applying the vite plugin patch
+COPY --chown=frontend:nodejs vite-plugin-solid-patch.js ./
 RUN node vite-plugin-solid-patch.js
 
 # I'm setting development environment variables
@@ -27,5 +39,5 @@ ENV VITE_API_URL=http://localhost:3001
 # I'm exposing the development server port
 EXPOSE 3000
 
-# I'm starting the development server with hot reload
+# I'm starting the development server
 CMD ["npm", "run", "dev"]
