--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "High-performance SolidJS frontend for computational showcase",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
+    "dev": "vinxi dev --host 0.0.0.0 --port 3000",
     "build": "vinxi build",
     "start": "vinxi start",
     "preview": "vinxi preview",
