--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -21,7 +21,7 @@ RUN cargo install cargo-watch
 WORKDIR /app
 
 COPY --chown=developer:developer Cargo.toml ./Cargo.toml
-COPY --chown=developer:developer database ./database
+COPY --chown=developer:developer src/database ./database
 
 RUN mkdir -p src && echo "fn main() {}" > src/main.rs && cargo generate-lockfile
 COPY --chown=developer:developer build.rs ./
